# taxi-demand-predictor-MLOps

./: .gitignore  00_download_raw_data.ipynb  00_upload_raw_data_adls.ipynb  01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  14_inference_pipeline.ipynb  README.md  certfile  keyfile  pyproject.toml
.github/workflows/: feature_pipeline.yml  feature_pipeline_with_cache.yml  inference_pipeline.yml
data/transformed/: ts_data_2022_01.parquet
models/: model.pkl
scripts/: backfill_inference.py
src/: adls.py  config.py  data_green.py  frontend.py  frontend_1.py  inference.py
