[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["fabiansum <fab.sumarna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
pandas = "^1.5.3"
jupyter = "^1.0.0"
pyarrow = "^11.0.0"
tqdm = "^4.65.0"
plotly = "^5.13.1"
requests = "^2.28.2"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"
lightgbm = "^3.3.5"
optuna = "^3.1.0"
hopsworks = "^3.0.5"
python-dotenv = "^1.0.0"
streamlit = "^1.19.0"
pydeck = "^0.8.0"
geopandas = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
